--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,5 @@
 <!-- <div id="app-header" ></div>
 <div class="app-header"></div> -->
 <app-header></app-header>
+
+<string-interpolation></string-interpolation>
