Two way data binding

--- a/src/app/one-way-string-interpolation/one-way-string-interpolation.component.html
+++ b/src/app/one-way-string-interpolation/one-way-string-interpolation.component.html
@@ -1,14 +1,15 @@
 
-<h1>Name-{{Name}}</h1>
-<h2>
+
+
+
+<h1>/*********************************String-interpolation using string *******************************/</h1>
+<div>
+<label>Name-{{Name}}</label>
+<label>
    Age- {{Age}}
-</h2>
-
-
-<h1>
-    string-interpolation using object
-</h1>
-
+</label>
+</div>
+<h1>/*********************************String-interpolation using object*******************************/</h1>
 <span>Name : {{gods.Name}}</span>
 <br>
 <span>Address : {{gods.Address}}</span>
