--- a/src/app/ngdirectives/ngdirectives.component.html
+++ b/src/app/ngdirectives/ngdirectives.component.html
@@ -7,7 +7,7 @@
 <label #elseBlock>Else block of *ngIf</label>
 
 
-<h1>/*********************************ngFor directive of int array********************************/</h1>
+<h1>/*********************************ngFor directive of int array***********************************/</h1>
 
 <div *ngFor="let item of [1,2,3,4,5,6]">
     <span>{{item}}</span>
